package at.htl.exam01.document;

public class Book {

    String author, title;

    public Book(String author, String title) {
        this.author = author;
        this.title = title;
    }

    public String getAuthor() {
        return author;
    }
}
