package at.htl.exam01.document;

public class Email {

    String author, subject, to;

    public Email(String author, String subject, String to){
        this.author = author;
        this.subject = subject;
        this.to = to;
    }
}

