@startuml

abstract class Document {
  # author : String
  + Document(String author)
  + getAuthor() : String
}

class Book {
  - title : String
  + Book(String author, String title)
  + getTitle() : String
}

class Email {
    - subject : String
    - to : String
    + Email(String author, String subject, String to)
    + getSubject() : String
    + getTo() : String

}

Document <|-- Book
Document <|-- Email

@enduml